Gestion de l'animation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "DBZ-Versus",
+    "name": "dbz-versus",
     "version": "0.1.0",
     "description": "DBZ Versus local web game",
     "repository": {
