--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "gulp-uglify": "^3.0.2",
         "lodash.mergewith": "^4.6.2",
         "path": "^0.12.7",
+        "png-js": "^1.0.0",
         "uikit": "^3.6.18"
     },
     "dependencies": {}
