Ajout de SERU Division du PUSHBACK dans le coin Gestion CANCEL GATLING via LEVEL

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,4 @@ src/pages/_templates/*.njk
 !src/pages/_templates/_macro.njk
 
 # Data extract
-src/assets/js/data/_extra
+src/assets/js/data/_extra/*.json
